--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>com.cos.maven</groupId>
+        <artifactId>maven-superpom</artifactId>
+        <version>1.06.17</version>
+    </parent>
     <groupId>rocks.spiffy</groupId>
     <artifactId>HateoasUtils</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.1.00.cosium-SNAPSHOT</version>
 
     <name>Hateoas Utils</name>
     <description>Some utilities to augment the functionality of the Spring Hateoas project</description>
