--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.cos.maven</groupId>
@@ -10,7 +8,7 @@
     </parent>
     <groupId>rocks.spiffy</groupId>
     <artifactId>HateoasUtils</artifactId>
-    <version>1.1.00.cosium-SNAPSHOT</version>
+    <version>1.1.00.cosium</version>
 
     <name>Hateoas Utils</name>
     <description>Some utilities to augment the functionality of the Spring Hateoas project</description>
@@ -33,7 +31,8 @@
 
     <scm>
         <url>https://github.com/ununbium/HateoasUtils</url>
-    </scm>
+      <tag>1.1.00.cosium</tag>
+  </scm>
 
     <properties>
         <java.version>1.8</java.version>
