--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>rocks.spiffy</groupId>
   <artifactId>HateoasUtils</artifactId>
-  <version>1.1.00.cosium</version>
+  <version>1.1.01.cosium-SNAPSHOT</version>
 
   <name>Hateoas Utils</name>
   <description>Some utilities to augment the functionality of the Spring Hateoas project</description>
@@ -31,7 +31,7 @@
 
   <scm>
     <url>https://github.com/ununbium/HateoasUtils</url>
-    <tag>1.1.00.cosium</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
