--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <groupId>rocks.spiffy</groupId>
   <artifactId>HateoasUtils</artifactId>
-  <version>1.1.00.cosium-SNAPSHOT</version>
+  <version>1.1.00.cosium</version>
 
   <name>Hateoas Utils</name>
   <description>Some utilities to augment the functionality of the Spring Hateoas project</description>
