--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>rocks.spiffy</groupId>
     <artifactId>HateoasUtils</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.0.0.cosium-SNAPSHOT</version>
 
     <name>Hateoas Utils</name>
     <description>Some utilities to augment the functionality of the Spring Hateoas project</description>
@@ -28,7 +28,8 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/ununbium/HateoasUtils</url>
+        <connection>scm:git:git@github.com:Cosium/HateoasUtils.git</connection>
+        <url>https://github.com/Cosium/HateoasUtils</url>
     </scm>
 
     <properties>
@@ -129,37 +130,23 @@
                     </goals>
                 </execution>
             </executions>
-        </plugin>
-
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
-            <executions>
-                <execution>
-                    <id>sign-artifacts</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>sign</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-
-        <plugin>
-            <groupId>org.sonatype.plugins</groupId>
-            <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.8</version>
-            <extensions>true</extensions>
             <configuration>
-                <serverId>ossrh</serverId>
-                <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                <failOnError>false</failOnError>
             </configuration>
         </plugin>
 
     </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>nexus-cosium-dev-releases</id>
+            <url>https://nexus.cosium.dev/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-cosium-dev-snapshots</id>
+            <url>https://nexus.cosium.dev/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
